# emefa-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_EXECUTION_PROMPT.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  README.md  docker-compose.prod.yml
android/: README.md  settings.gradle.kts
backend/: pyproject.toml
backend/emefa/: __init__.py  config.py  main.py  observability.py  scheduler.py  skills.py
backend/emefa/api/: __init__.py  agent.py  briefings.py  demo.py  devices.py  documents.py  memories.py  profile.py  prospects.py  realtime.py  system.py  tasks.py  voice_llm.py  web_session.py
backend/emefa/domain/: __init__.py  agent.py  approvals.py  briefings.py  conversations.py  devices.py  documents.py  email.py  memories.py  policy.py  profiles.py  prospects.py  ratelimit.py  storage.py  tasks.py
backend/emefa/infrastructure/: __init__.py  deepseek.py  email.py  realtime.py  voice_llm.py  website_profile.py
backend/tests/: test_agent_api.py  test_agent_engine.py  test_approvals.py  test_briefings.py  test_conversations.py  test_deepseek.py  test_demo.py  test_devices.py  test_documents.py  test_email.py  test_email_provider.py  test_email_skills.py  test_health.py  test_memories.py  test_policy.py  test_production_web.py  test_profiles.py  test_prospects.py  test_realtime_api.py  test_security_hardening.py  test_skills.py  test_system_status.py  test_tasks.py  test_voice_llm.py  test_web_session.py  test_website_profile.py
docs/: ADMINISTRATIVE_ASSISTANT_ENGINE.md  ARCHITECTURE.md  AUTONOMY_AND_WORKFLOWS.md  BACKLOG.md  (+13 more)
(+37 files in other folders)
