[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "emefa-backend"
version = "0.1.0"
description = "Greenfield backend for the EMEFA personal assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.6,<3",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
